--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -33,6 +33,16 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.75" />
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profile_image"
+        style="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@drawable/default_user_avataar"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
+        app:layout_constraintStart_toStartOf="@id/start_guideline"
+        app:layout_constraintTop_toTopOf="@id/top_guideline"/>
 
     <TextView
         android:id="@+id/hello_text"
@@ -40,11 +50,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:textAllCaps="true"
+        android:visibility="gone"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@id/user_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/start_guideline"
+        app:layout_constraintStart_toEndOf="@id/profile_image"
         app:layout_constraintTop_toTopOf="@id/top_guideline" />
 
     <TextView
@@ -52,10 +63,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:visibility="gone"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/start_guideline"
+        app:layout_constraintStart_toEndOf="@id/profile_image"
         app:layout_constraintTop_toBottomOf="@+id/hello_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
