--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -14,6 +14,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/default_user_avataar"
         android:scaleType="centerCrop"
         android:contentDescription="@null"
         />
